lib_LTLIBRARIES = libclan31GUI.la

libclan31GUI_la_SOURCES = \
accelerator_table.cpp \
gui_xml_loader_version_1_0.cpp \
precomp.cpp \
gui_manager_impl.cpp \
gui_component.cpp \
accelerator_key.cpp \
gui_component_impl.cpp \
gui_element.cpp \
gui_manager.cpp \
gui_component_select_node.cpp \
setup_gui.cpp \
Components/scrollbar.cpp \
Components/scrollbar_impl.cpp \
Components/spin.cpp \
Components/tab.cpp \
Components/dragbox.cpp \
Components/Menus/popupmenu_window.cpp \
Components/Menus/menubar.cpp \
Components/Menus/popupmenu.cpp \
Components/Menus/menu_modal_loop.cpp \
Components/Menus/popupmenu_item.cpp \
Components/checkbox.cpp \
Components/toolbar.cpp \
Components/tooltip.cpp \
Components/Ribbon/ribbon_section_impl.cpp \
Components/Ribbon/ribbon_menu_impl.cpp \
Components/Ribbon/ribbon_impl.cpp \
Components/Ribbon/ribbon_page_impl.cpp \
Components/Ribbon/ribbon_section.cpp \
Components/Ribbon/ribbon_menu.cpp \
Components/Ribbon/ribbon.cpp \
Components/Ribbon/ribbon_page.cpp \
Components/toolbar_item.cpp \
Components/message_box_component.cpp \
Components/savefiledialog.cpp \
Components/textedit.cpp \
Components/folderbrowsedialog.cpp \
Components/message_box.cpp \
Components/tab_header.cpp \
Components/slider.cpp \
Components/radiobutton.cpp \
Components/label.cpp \
Components/tab_page.cpp \
Components/combobox.cpp \
Components/openfiledialog.cpp \
Components/frame.cpp \
Components/push_button.cpp \
Components/imageview.cpp \
Components/ListView/listview.cpp \
Components/ListView/listview_layout_thumbnails.cpp \
Components/ListView/listview_item.cpp \
Components/ListView/listview_layout_icons.cpp \
Components/ListView/listview_layout_details.cpp \
Components/ListView/listview_layout.cpp \
Components/ListView/listview_selected_item.cpp \
Components/ListView/listview_column_data.cpp \
Components/ListView/listview_icon.cpp \
Components/ListView/listview_renderer.cpp \
Components/ListView/listview_icon_list.cpp \
Components/ListView/listview_column_header.cpp \
Components/ListView/listview_header.cpp \
Components/lineedit.cpp \
Components/window.cpp \
Components/statusbar.cpp \
Components/progressbar.cpp \
Components/groupbox.cpp \
gui_theme_part.cpp \
WindowManager/gui_window_manager.cpp \
WindowManager/gui_window_manager_texture.cpp \
WindowManager/gui_window_manager_provider_direct.cpp \
WindowManager/gui_window_manager_provider_system.cpp \
WindowManager/gui_window_manager_direct.cpp \
WindowManager/gui_window_manager_provider_texture.cpp \
WindowManager/gui_window_manager_texture_window.cpp \
WindowManager/gui_window_manager_system.cpp \
Layout/gui_layout_absolute_or_fixed.cpp \
Layout/gui_find_preferred_width.cpp \
Layout/gui_set_initial_used_values.cpp \
Layout/gui_layout_corners.cpp \
Layout/gui_layout_provider_corners.cpp \
Layout/gui_layout_content.cpp \
Layout/gui_css_display_visitor.cpp \
Layout/gui_layout_normal_flow.cpp \
Layout/gui_find_preferred_height.cpp \
Layout/gui_layout.cpp

libclan31GUI_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE) \
  $(extra_LIBS_clanGUI)

libclan31GUI_la_CXXFLAGS=$(clanGUI_CXXFLAGS) $(extra_CFLAGS_clanGUI)

# EOF #
