lib_LTLIBRARIES = libclanGUI.la

libclanGUI_la_SOURCES = \
frame_generic.cpp \
treeview_generic.h \
component_manager.cpp \
frame.cpp \
image_generic.h \
button_generic.h \
listbox_generic.h \
radiogroup.cpp \
progressbar_generic.cpp \
component_manager_generic.h \
radiogroup_generic.h \
gui_manager.cpp \
component_generic.h \
stylemanager.cpp \
scrollbar_generic.cpp \
inputbox_generic.cpp \
inputbox_stylebase.cpp \
inputdialog.cpp \
inputdialog_generic.cpp \
richedit.cpp \
richedit_generic.cpp \
richedit_generic.h \
richedit_paragraph.cpp \
label.cpp \
precomp.h \
gui_manager_generic.h \
component_tokenizer.h \
scrollbar_generic.h \
listbox.cpp \
inputbox.cpp \
image_generic.cpp \
component_resize_handler.cpp \
treenode_generic.cpp \
filedialog_generic.cpp \
inputbox_generic.h \
button.cpp \
component_manager_generic.cpp \
progressbar.cpp \
component.cpp \
component_type.cpp \
component_type_generic.h \
layout.cpp \
layout_generic.cpp \
layout_generic.h \
layout_item.cpp \
layout_item.h \
gui_manager_generic.cpp \
treenode_generic.h \
image.cpp \
button_generic.cpp \
default_component_types.h \
checkbox.cpp \
component_generic.cpp \
radiobutton.cpp \
messagebox_generic.cpp \
treeitem.cpp \
label_generic.cpp \
listbox_generic.cpp \
setupgui.cpp \
progressbar_generic.h \
messagebox.cpp \
scrollbar.cpp \
frame_generic.h \
radiogroup_generic.cpp \
componentfile_preprocess.h \
label_generic.h \
component_move_handler.cpp \
treenode.cpp \
window.cpp \
window_generic.cpp \
treeview.cpp \
filedialog_generic.h \
treeitem_generic.cpp \
messagebox_generic.h \
treeitem_generic.h \
treeview_generic.cpp \
precomp.cpp \
filedialog.cpp \
window_generic.h \
menu_node_generic.h \
menu.cpp \
menu_node.cpp \
menu_node_generic.cpp \
menu_generic.h \
menu_generic.cpp \
menu_item.cpp \
menu_item_generic.cpp \
deck.cpp \
deck_generic.h \
deck_generic.cpp



libclanGUI_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE)

# EOF #
