lib_LTLIBRARIES = libclan22GUI.la

libclan22GUI_la_SOURCES = \
setup_gui.h \
setup_gui.cpp \
gui_theme_layout_manager.cpp \
gui_theme_layout_manager.h \
gui_font_cache.h \
gui_font_cache.cpp \
gui_xml_loader_version_1_0.cpp \
gui_xml_loader_version_1_0.h \
gui_message_activation_change.cpp \
gui_layout_corners.cpp \
gui_layout.cpp \
gui_component.cpp \
gui_component_description.cpp \
gui_component_impl.cpp \
gui_manager.cpp \
gui_manager_impl.cpp \
gui_message.cpp \
gui_message_close.cpp \
gui_message_focus_change.cpp \
gui_message_input.cpp \
gui_message_pointer.cpp \
gui_message_resize.cpp \
gui_theme.cpp \
gui_theme_default.cpp \
gui_layout_provider_corners.cpp \
gui_layout_provider_corners.h \
gui_theme_provider_default.cpp \
gui_theme_provider_default.h \
gui_theme_part.cpp \
gui_theme_part_property.cpp \
gui_theme_part_property_impl.cpp \
gui_theme_part_impl.h \
gui_theme_part_property_impl.h \
precomp.cpp \
gui_window_manager_provider_texture.cpp \
gui_window_manager_provider_texture.h \
gui_window_manager.cpp \
gui_window_manager_system.cpp \
gui_window_manager_texture.cpp \
gui_window_manager_provider_system.h \
gui_window_manager_provider_system.cpp \
gui_window_manager_texture_window.cpp \
accelerator_table.cpp \
accelerator_key.cpp \
Components/checkbox.cpp \
Components/combobox.cpp \
Components/frame.cpp \
Components/groupbox.cpp \
Components/label.cpp \
Components/tab_page.cpp \
Components/lineedit.cpp \
Components/toolbar_item_impl.h \
Components/toolbar_item.cpp \
Components/tab_page_impl.h \
Components/imageview.cpp \
Components/ListView/listview.cpp \
Components/ListView/listview_layout_icons.cpp \
Components/ListView/listview_layout_details.cpp \
Components/ListView/listview_layout_details.h \
Components/ListView/listview_layout.cpp \
Components/ListView/listview_layout.h \
Components/ListView/listview_layout_icons.h \
Components/ListView/listview_renderer.cpp \
Components/ListView/listview_renderer.h \
Components/ListView/listview_shown_item.h \
Components/ListView/listview_icon_list.cpp \
Components/ListView/listview_column_data.cpp \
Components/ListView/listview_icon.cpp \
Components/ListView/listview_column_header.cpp \
Components/ListView/listview_header.cpp \
Components/ListView/listview_item.cpp \
Components/ListView/listview_selected_item.cpp \
Components/ListView/listview_column_header_impl.h \
Components/ListView/listview_item_impl.h \
Components/ListView/listview_impl.h \
Components/ListView/listview_layout_thumbnails.cpp \
Components/ListView/listview_layout_thumbnails.h \
Components/main_window.cpp \
Components/Menus/menubar.cpp \
Components/Menus/popupmenu.cpp \
Components/Menus/popupmenu_item.cpp \
Components/Menus/popupmenu_item.h \
Components/Menus/popupmenu_window.cpp \
Components/Menus/menu_modal_loop.cpp \
Components/Menus/popupmenu_window.h \
Components/Menus/popupmenu_impl.h \
Components/Menus/menu_modal_loop.h \
Components/Menus/menubar_impl.h \
Components/progressbar.cpp \
Components/push_button.cpp \
Components/radiobutton.cpp \
Components/scrollbar.cpp \
Components/scrollbar_impl.cpp \
Components/slider.cpp \
Components/spin.cpp \
Components/statusbar.cpp \
Components/tab.cpp \
Components/textedit.cpp \
Components/toolbar.cpp \
Components/tooltip.cpp \
Components/tab_header.cpp \
Components/window.cpp \
Components/openfiledialog.cpp \
Components/savefiledialog.cpp \
Components/filedialog_impl.h \
gui_component_description_impl.h \
gui_component_impl.h \
gui_manager_impl.h \
gui_theme_default_impl.h \
precomp.h

libclan22GUI_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE) \
  $(extra_LIBS_clanGUI)

libclan22GUI_la_CXXFLAGS=$(clanGUI_CXXFLAGS) $(extra_CFLAGS_clanGUI)

# EOF #
