lib_LTLIBRARIES = libclanGUIStyleSilver.la

libclanGUIStyleSilver_la_SOURCES = \
button_silver.cpp    label_silver.cpp        scrollbar_silver.cpp \
checkbox_silver.cpp  listbox_silver.cpp      stylemanager_silver.cpp \
frame_silver.cpp     image_silver.cpp     progressbar_silver.cpp \
inputbox_silver.cpp  radiobutton_silver.cpp  window_silver.cpp \
button_silver.h    label_silver.h	   scrollbar_silver.h \
checkbox_silver.h  listbox_silver.h	   frame_silver.h \
image_silver.h     progressbar_silver.h  window_silver.h \
inputbox_silver.h  radiobutton_silver.h richedit_silver.cpp \
menu_silver.cpp      menu_node_silver.cpp	menu_item_silver.cpp \
treeitem_silver.cpp	treeview_silver.cpp \
treeitem_silver.h	treeview_silver.h



libclanGUIStyleSilver_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE)

# EOF #
