lib_LTLIBRARIES = libclan30GameIDE.la

libclan30GameIDE_la_SOURCES = \
	precomp.cpp

libclan30GameIDE_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE) \
  $(extra_LIBS_clanGameIDE)

libclan30GameIDE_la_CXXFLAGS=$(clanGameIDE_CXXFLAGS) $(extra_CFLAGS_clanGameIDE)
# EOF #

