lib_LTLIBRARIES = libclan31GameIDE.la

libclan31GameIDE_la_SOURCES = \
FileItemType/file_item_type_factory.cpp \
SolutionExplorer/solution_explorer.cpp \
SolutionExplorer/dlg_open_with.cpp \
SolutionExplorer/drag_drop_operation.cpp \
SolutionExplorer/dlg_add_new_item.cpp \
WelcomePage/welcome_page.cpp \
PropertyManager/property_manager.cpp \
MainWindow/dlg_add_new_project.cpp \
MainWindow/main_window.cpp \
precomp.cpp \
UIController/ui_ribbon_section.cpp \
UIController/document_editor.cpp \
UIController/document_editor_ribbon.cpp \
UIController/ui_controller.cpp \
Workspace/dock_icons_overlay.cpp \
Workspace/docking_group.cpp \
Workspace/view_frame.cpp \
Workspace/docked_frame.cpp \
Workspace/tab_dock.cpp \
Workspace/dockable_component.cpp \
Workspace/workspace.cpp \
Workspace/document_dock.cpp \
Workspace/dock.cpp \
Workspace/view_dock.cpp \
Workspace/tool_window.cpp \
SolutionModel/UserOptions/user_options.cpp \
SolutionModel/Project/project_item.cpp \
SolutionModel/Project/project.cpp \
SolutionModel/Solution/solution.cpp \
SolutionModel/solution_model.cpp \
BuildSystem/build_system.cpp \
BuildSystem/build_operation.cpp \
BuildSystem/build_system_ribbon.cpp

if WIN32
libclan31GameIDE_la_SOURCES += \
TextEditor/scintilla_editor.cpp \
TextEditor/text_editor_ribbon.cpp \
TextEditor/scintilla_editor_impl.cpp \
TextEditor/text_editor.cpp \
TextEditor/text_editor_file_item_type.cpp \
TextEditor/Scintilla/lexers/LexErlang.cxx \
TextEditor/Scintilla/lexers/LexOthers.cxx \
TextEditor/Scintilla/lexers/LexPascal.cxx \
TextEditor/Scintilla/lexers/LexGAP.cxx \
TextEditor/Scintilla/lexers/LexEScript.cxx \
TextEditor/Scintilla/lexers/LexOpal.cxx \
TextEditor/Scintilla/lexers/LexAda.cxx \
TextEditor/Scintilla/lexers/LexAsn1.cxx \
TextEditor/Scintilla/lexers/LexCmake.cxx \
TextEditor/Scintilla/lexers/LexVB.cxx \
TextEditor/Scintilla/lexers/LexVHDL.cxx \
TextEditor/Scintilla/lexers/LexTAL.cxx \
TextEditor/Scintilla/lexers/LexLout.cxx \
TextEditor/Scintilla/lexers/LexBash.cxx \
TextEditor/Scintilla/lexers/LexAPDL.cxx \
TextEditor/Scintilla/lexers/LexD.cxx \
TextEditor/Scintilla/lexers/LexFlagship.cxx \
TextEditor/Scintilla/lexers/LexSpecman.cxx \
TextEditor/Scintilla/lexers/LexBasic.cxx \
TextEditor/Scintilla/lexers/LexKix.cxx \
TextEditor/Scintilla/lexers/LexLua.cxx \
TextEditor/Scintilla/lexers/LexR.cxx \
TextEditor/Scintilla/lexers/LexPB.cxx \
TextEditor/Scintilla/lexers/LexCsound.cxx \
TextEditor/Scintilla/lexers/LexSQL.cxx \
TextEditor/Scintilla/lexers/LexProgress.cxx \
TextEditor/Scintilla/lexers/LexPLM.cxx \
TextEditor/Scintilla/lexers/LexBullant.cxx \
TextEditor/Scintilla/lexers/LexMagik.cxx \
TextEditor/Scintilla/lexers/LexSorcus.cxx \
TextEditor/Scintilla/lexers/LexMMIXAL.cxx \
TextEditor/Scintilla/lexers/LexAVE.cxx \
TextEditor/Scintilla/lexers/LexA68k.cxx \
TextEditor/Scintilla/lexers/LexRebol.cxx \
TextEditor/Scintilla/lexers/LexCaml.cxx \
TextEditor/Scintilla/lexers/LexTxt2tags.cxx \
TextEditor/Scintilla/lexers/LexASY.cxx \
TextEditor/Scintilla/lexers/LexTACL.cxx \
TextEditor/Scintilla/lexers/LexTeX.cxx \
TextEditor/Scintilla/lexers/LexModula.cxx \
TextEditor/Scintilla/lexers/LexConf.cxx \
TextEditor/Scintilla/lexers/LexLisp.cxx \
TextEditor/Scintilla/lexers/LexSML.cxx \
TextEditor/Scintilla/lexers/LexVerilog.cxx \
TextEditor/Scintilla/lexers/LexScriptol.cxx \
TextEditor/Scintilla/lexers/LexHaskell.cxx \
TextEditor/Scintilla/lexers/LexRuby.cxx \
TextEditor/Scintilla/lexers/LexMPT.cxx \
TextEditor/Scintilla/lexers/LexPS.cxx \
TextEditor/Scintilla/lexers/LexCOBOL.cxx \
TextEditor/Scintilla/lexers/LexAbaqus.cxx \
TextEditor/Scintilla/lexers/LexPowerShell.cxx \
TextEditor/Scintilla/lexers/LexAsm.cxx \
TextEditor/Scintilla/lexers/LexPowerPro.cxx \
TextEditor/Scintilla/lexers/LexYAML.cxx \
TextEditor/Scintilla/lexers/LexCLW.cxx \
TextEditor/Scintilla/lexers/LexGui4Cli.cxx \
TextEditor/Scintilla/lexers/LexInno.cxx \
TextEditor/Scintilla/lexers/LexSmalltalk.cxx \
TextEditor/Scintilla/lexers/LexMySQL.cxx \
TextEditor/Scintilla/lexers/LexEiffel.cxx \
TextEditor/Scintilla/lexers/LexBaan.cxx \
TextEditor/Scintilla/lexers/LexPython.cxx \
TextEditor/Scintilla/lexers/LexCPP.cxx \
TextEditor/Scintilla/lexers/LexPerl.cxx \
TextEditor/Scintilla/lexers/LexTADS3.cxx \
TextEditor/Scintilla/lexers/LexCrontab.cxx \
TextEditor/Scintilla/lexers/LexNsis.cxx \
TextEditor/Scintilla/lexers/LexTCL.cxx \
TextEditor/Scintilla/lexers/LexHTML.cxx \
TextEditor/Scintilla/lexers/LexPOV.cxx \
TextEditor/Scintilla/lexers/LexMatlab.cxx \
TextEditor/Scintilla/lexers/LexNimrod.cxx \
TextEditor/Scintilla/lexers/LexAU3.cxx \
TextEditor/Scintilla/lexers/LexMSSQL.cxx \
TextEditor/Scintilla/lexers/LexMarkdown.cxx \
TextEditor/Scintilla/lexers/LexForth.cxx \
TextEditor/Scintilla/lexers/LexMetapost.cxx \
TextEditor/Scintilla/lexers/LexCSS.cxx \
TextEditor/Scintilla/lexers/LexSpice.cxx \
TextEditor/Scintilla/lexers/LexFortran.cxx \
TextEditor/Scintilla/src/Catalogue.cxx \
TextEditor/Scintilla/src/Decoration.cxx \
TextEditor/Scintilla/src/Indicator.cxx \
TextEditor/Scintilla/src/LineMarker.cxx \
TextEditor/Scintilla/src/ContractionState.cxx \
TextEditor/Scintilla/src/RunStyles.cxx \
TextEditor/Scintilla/src/ExternalLexer.cxx \
TextEditor/Scintilla/src/CellBuffer.cxx \
TextEditor/Scintilla/src/Style.cxx \
TextEditor/Scintilla/src/CharClassify.cxx \
TextEditor/Scintilla/src/Document.cxx \
TextEditor/Scintilla/src/Editor.cxx \
TextEditor/Scintilla/src/PositionCache.cxx \
TextEditor/Scintilla/src/XPM.cxx \
TextEditor/Scintilla/src/UniConversion.cxx \
TextEditor/Scintilla/src/CallTip.cxx \
TextEditor/Scintilla/src/AutoComplete.cxx \
TextEditor/Scintilla/src/KeyMap.cxx \
TextEditor/Scintilla/src/PerLine.cxx \
TextEditor/Scintilla/src/Selection.cxx \
TextEditor/Scintilla/src/ViewStyle.cxx \
TextEditor/Scintilla/src/ScintillaBase.cxx \
TextEditor/Scintilla/src/RESearch.cxx \
TextEditor/Scintilla/lexlib/WordList.cxx \
TextEditor/Scintilla/lexlib/Accessor.cxx \
TextEditor/Scintilla/lexlib/CharacterSet.cxx \
TextEditor/Scintilla/lexlib/LexerSimple.cxx \
TextEditor/Scintilla/lexlib/LexerNoExceptions.cxx \
TextEditor/Scintilla/lexlib/StyleContext.cxx \
TextEditor/Scintilla/lexlib/PropSetSimple.cxx \
TextEditor/Scintilla/lexlib/LexerBase.cxx \
TextEditor/Scintilla/lexlib/LexerModule.cxx
endif

libclan31GameIDE_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE) \
  $(extra_LIBS_clanGameIDE)

libclan31GameIDE_la_CXXFLAGS=$(clanGameIDE_CXXFLAGS) $(extra_CFLAGS_clanGameIDE)
# EOF #

