lib_LTLIBRARIES = libclan30Physics2D.la

libclan30Physics2D_la_SOURCES = \
	precomp.cpp

libclan30Physics2D_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE) \
  $(extra_LIBS_clanPhysics2D)

libclan30Physics2D_la_CXXFLAGS=$(clanPhysics2D_CXXFLAGS) $(extra_CFLAGS_clanPhysics2D)
# EOF #

