lib_LTLIBRARIES = libclan30Physics2D.la

libclan30Physics2D_la_SOURCES = \
Collision/Shapes/polygon_shape.cpp \
Collision/Shapes/edge_shape.cpp \
Collision/Shapes/circle_shape.cpp \
Collision/Shapes/chain_shape.cpp \
Collision/Shapes/shape.cpp \
Collision/physics_object.cpp \
precomp.cpp \
World/physics_listener.cpp \
World/physics_context.cpp \
World/physics_world_description.cpp \
World/query_result.cpp \
World/physics_query_assistant_impl.cpp \
World/physics_world.cpp \
World/physics_debug_draw_impl.cpp \
World/physics_world_impl.cpp \
World/physics_debug_draw.cpp \
World/physics_context_impl.cpp \
World/physics_query_assistant.cpp \
Dynamics/body.cpp \
Dynamics/Joints/joint_impl.cpp \
Dynamics/Joints/distance_joint.cpp \
Dynamics/Joints/prismatic_joint.cpp \
Dynamics/Joints/revolute_joint.cpp \
Dynamics/Joints/distance_joint_description.cpp \
Dynamics/Joints/joint.cpp \
Dynamics/Joints/joint_description.cpp \
Dynamics/Joints/mouse_joint_description.cpp \
Dynamics/Joints/prismatic_joint_description.cpp \
Dynamics/Joints/mouse_joint.cpp \
Dynamics/Joints/revolute_joint_description.cpp \
Dynamics/body_impl.cpp \
Dynamics/fixture_impl.cpp \
Dynamics/fixture_description.cpp \
Dynamics/body_description.cpp \
Dynamics/fixture.cpp \
Box2D/Rope/b2Rope.cpp \
Box2D/Collision/Shapes/b2ChainShape.cpp \
Box2D/Collision/Shapes/b2CircleShape.cpp \
Box2D/Collision/Shapes/b2PolygonShape.cpp \
Box2D/Collision/Shapes/b2EdgeShape.cpp \
Box2D/Collision/b2Collision.cpp \
Box2D/Collision/b2CollideCircle.cpp \
Box2D/Collision/b2BroadPhase.cpp \
Box2D/Collision/b2TimeOfImpact.cpp \
Box2D/Collision/b2CollidePolygon.cpp \
Box2D/Collision/b2Distance.cpp \
Box2D/Collision/b2CollideEdge.cpp \
Box2D/Collision/b2DynamicTree.cpp \
Box2D/Common/b2Settings.cpp \
Box2D/Common/b2BlockAllocator.cpp \
Box2D/Common/b2StackAllocator.cpp \
Box2D/Common/b2Math.cpp \
Box2D/Common/b2Timer.cpp \
Box2D/Common/b2Draw.cpp \
Box2D/Dynamics/b2WorldCallbacks.cpp \
Box2D/Dynamics/b2Fixture.cpp \
Box2D/Dynamics/Joints/b2DistanceJoint.cpp \
Box2D/Dynamics/Joints/b2MouseJoint.cpp \
Box2D/Dynamics/Joints/b2FrictionJoint.cpp \
Box2D/Dynamics/Joints/b2WeldJoint.cpp \
Box2D/Dynamics/Joints/b2RopeJoint.cpp \
Box2D/Dynamics/Joints/b2GearJoint.cpp \
Box2D/Dynamics/Joints/b2Joint.cpp \
Box2D/Dynamics/Joints/b2PulleyJoint.cpp \
Box2D/Dynamics/Joints/b2PrismaticJoint.cpp \
Box2D/Dynamics/Joints/b2RevoluteJoint.cpp \
Box2D/Dynamics/Joints/b2WheelJoint.cpp \
Box2D/Dynamics/b2Body.cpp \
Box2D/Dynamics/Contacts/b2PolygonContact.cpp \
Box2D/Dynamics/Contacts/b2CircleContact.cpp \
Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.cpp \
Box2D/Dynamics/Contacts/b2Contact.cpp \
Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.cpp \
Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.cpp \
Box2D/Dynamics/Contacts/b2ContactSolver.cpp \
Box2D/Dynamics/Contacts/b2ChainAndCircleContact.cpp \
Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.cpp \
Box2D/Dynamics/b2Island.cpp \
Box2D/Dynamics/b2ContactManager.cpp \
Box2D/Dynamics/b2World.cpp

libclan30Physics2D_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE) \
  $(extra_LIBS_clanPhysics2D)

libclan30Physics2D_la_CXXFLAGS=$(clanPhysics2D_CXXFLAGS) $(extra_CFLAGS_clanPhysics2D)
# EOF #

