lib_LTLIBRARIES = libclan30Physics3D.la

libclan30Physics3D_la_SOURCES = \
	precomp.cpp

libclan30Physics3D_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE) \
  $(extra_LIBS_clanPhysics3D)

libclan30Physics3D_la_CXXFLAGS=$(clanPhysics3D_CXXFLAGS) $(extra_CFLAGS_clanPhysics3D)
# EOF #

